[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/MiniGames/BacteriaKiller.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Entities/PlacementCursor.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0.588235, 0, 0, 1 )

[node name="PlacementCursor" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PillsLeftLabel" type="Label" parent="CanvasLayer"]
margin_right = 68.0
margin_bottom = 14.0
text = "Pills left: 3"

[connection signal="dispensed_pill" from="PlacementCursor" to="." method="_on_PlacementCursor_dispensed_pill"]
